--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.3",
+    "react-native-web": "^0.19.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
